--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#012577",
+    "titleBar.activeBackground": "#0134A7",
+    "titleBar.activeForeground": "#F8FAFF"
+  }
 }
